# myune_music

./: .gitignore  LICENSE  README.md  analysis_options.yaml  build_setup.iss  pubspec.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  improvement.yml
.github/workflows/: flutter_linux.yml  flutter_macos.yml  flutter_windows.yml
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: hot_keys.dart  main.dart  smtc_manager.dart
lib/layout/: app_shell.dart  main_view.dart  navigation_notifier.dart
lib/media_service/: linux_media_service.dart  platform_media_service.dart  smtc_manager.dart  windows_media_service.dart
lib/page/: song_detail_page.dart
lib/services/: font_service.dart  global_hotkey_manager.dart
lib/theme/: scroll_config.dart  theme_provider.dart
lib/widgets/: app_window_title_bar.dart  balance_rate_control.dart  font_selector_dialog.dart  font_selector_row.dart  hover_overlay_control.dart  interlude_animation_widget.dart  lyrics_settings_drawer.dart  lyrics_widget.dart  play_mode_button.dart  play_pause_button.dart  playbar.dart  playing_queue_drawer.dart  single_line_lyrics.dart  sort_dialog.dart  volume_control_state.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake  (+1 more)
list_data/: playlists_metadata.json
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: audio_info.rs  mod.rs  smtc.rs
rust_builder/: pubspec.yaml
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+102 files in other folders)
